[gd_scene load_steps=23 format=3 uid="uid://df2a48ft85jww"]

[ext_resource type="Script" path="res://Scenes/Levels/first_level.gd" id="1_wuo18"]
[ext_resource type="PackedScene" uid="uid://cko3v1cmgn5ji" path="res://Scenes/Levels/wall.tscn" id="3_0wlbe"]
[ext_resource type="Texture2D" uid="uid://redhb1e7bdea" path="res://Texture/UI/punktire_line.png" id="5_7ui2n"]
[ext_resource type="Texture2D" uid="uid://ehfrga1mi7t1" path="res://Texture/UI/i.png" id="5_ho1at"]
[ext_resource type="Shader" path="res://Resources/Shaders/repeat_texture.gdshader" id="5_ix1q1"]
[ext_resource type="Texture2D" uid="uid://bccybr0vgw8f2" path="res://Texture/Balls/3).png" id="6_3rmiv"]
[ext_resource type="Texture2D" uid="uid://bnub4rxgaa20e" path="res://Texture/UI/strelka.png" id="8_wf17s"]
[ext_resource type="PackedScene" uid="uid://i7udjd2in6et" path="res://Scenes/UI/ball_rotate_ui.tscn" id="9_2r8vu"]
[ext_resource type="FontFile" uid="uid://d0mbp31a4exgl" path="res://Resources/Fonts/Lilita One Regular.ttf" id="10_fo6nb"]
[ext_resource type="Texture2D" uid="uid://couua5ueetks2" path="res://Texture/Bacgrounds/Фон.png" id="10_t5r1o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0xly"]
size = Vector2(721, 118)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7sh1d"]
shader = ExtResource("5_ix1q1")

[sub_resource type="LabelSettings" id="LabelSettings_skssn"]
font_size = 30
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_ockje"]
font_size = 70
outline_size = 10
outline_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_al670"]
bg_color = Color(0.478007, 0.618938, 0.736741, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkoco"]
bg_color = Color(0.478007, 0.618938, 0.736741, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ny5mh"]
bg_color = Color(0.478007, 0.618938, 0.736741, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8hou"]
bg_color = Color(0.478007, 0.618938, 0.736741, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjevs"]
bg_color = Color(0.478007, 0.618938, 0.736741, 1)

[sub_resource type="Theme" id="Theme_6um41"]
Button/styles/disabled = SubResource("StyleBoxFlat_al670")
Button/styles/focus = SubResource("StyleBoxFlat_jkoco")
Button/styles/hover = SubResource("StyleBoxFlat_ny5mh")
Button/styles/normal = SubResource("StyleBoxFlat_x8hou")
Button/styles/pressed = SubResource("StyleBoxFlat_xjevs")

[sub_resource type="LabelSettings" id="LabelSettings_afqc7"]
font = ExtResource("10_fo6nb")
font_size = 90
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-1, 4)

[sub_resource type="LabelSettings" id="LabelSettings_s7tw1"]
font = ExtResource("10_fo6nb")
font_size = 70
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-1, 4)

[node name="First_level" type="Node2D"]
script = ExtResource("1_wuo18")

[node name="Dicariations" type="Node2D" parent="."]

[node name="Detection_last_ball" type="Area2D" parent="Dicariations"]
position = Vector2(7.5, -37)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dicariations/Detection_last_ball"]
position = Vector2(351, 1202)
shape = SubResource("RectangleShape2D_b0xly")

[node name="Fon" type="Sprite2D" parent="Dicariations"]
z_index = -1
position = Vector2(363, 640.5)
texture = ExtResource("10_t5r1o")

[node name="Walls" type="Node2D" parent="Dicariations"]
visible = false
position = Vector2(-401.5, -67)

[node name="Wall" parent="Dicariations/Walls" instance=ExtResource("3_0wlbe")]
position = Vector2(-343, -11)

[node name="Wall2" parent="Dicariations/Walls" instance=ExtResource("3_0wlbe")]
position = Vector2(660, -57)
rotation = 1.5708

[node name="Wall3" parent="Dicariations/Walls" instance=ExtResource("3_0wlbe")]
position = Vector2(1378, -81)
rotation = 1.5708

[node name="Start_bullet_position" type="Node2D" parent="Dicariations"]

[node name="Detection_walls" type="RayCast2D" parent="Dicariations/Start_bullet_position"]
position = Vector2(358, 1203)
target_position = Vector2(720, 197)

[node name="Line2D" type="Line2D" parent="Dicariations/Start_bullet_position"]
z_index = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_7sh1d")
points = PackedVector2Array(0, 0, 0, 0)
width = 5.0
texture = ExtResource("5_7ui2n")
texture_mode = 1

[node name="Count_bullet_label" type="Label" parent="Dicariations/Start_bullet_position"]
z_index = 1
offset_left = 331.0
offset_top = 1140.0
offset_right = 382.0
offset_bottom = 1182.0
text = "x10"
label_settings = SubResource("LabelSettings_skssn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start_bullet_position" type="Sprite2D" parent="Dicariations/Start_bullet_position"]
z_index = 1
position = Vector2(359.5, 1205.5)
texture = ExtResource("6_3rmiv")

[node name="Ball_rotate_UI" parent="Dicariations/Start_bullet_position" instance=ExtResource("9_2r8vu")]
position = Vector2(359, 1205)

[node name="Strelka" type="Line2D" parent="Dicariations/Start_bullet_position"]
points = PackedVector2Array(359, 1207, 359, 1208)
width = 30.0
texture = ExtResource("8_wf17s")
texture_mode = 2

[node name="Setka" type="Node2D" parent="Dicariations"]
position = Vector2(50, 232)

[node name="Game_objects" type="Node2D" parent="."]
position = Vector2(51, 48)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)

[node name="UI" type="Control" parent="."]
z_index = -1
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="End_game" type="Control" parent="UI"]
visible = false
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = -379.0
offset_top = -120.0
offset_right = -339.0
offset_bottom = -80.0

[node name="ColorRect" type="ColorRect" parent="UI/End_game"]
z_index = 1
layout_mode = 0
offset_left = -1170.0
offset_top = -431.0
offset_right = 2834.0
offset_bottom = 1771.0
mouse_filter = 2
color = Color(0.0745098, 0.0745098, 0.0745098, 0.854902)

[node name="Win" type="Label" parent="UI/End_game"]
z_index = 1
layout_mode = 0
offset_left = 341.0
offset_top = 615.0
offset_right = 1139.0
offset_bottom = 711.0
text = "ПОБЕДА"
label_settings = SubResource("LabelSettings_ockje")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start_again" type="Button" parent="UI/End_game"]
z_index = 2
layout_mode = 0
offset_left = 514.0
offset_top = 780.0
offset_right = 980.0
offset_bottom = 862.0
theme = SubResource("Theme_6um41")
theme_override_font_sizes/font_size = 40
text = "Попробовать ещё раз"

[node name="Start_again" type="Sprite2D" parent="UI"]
z_index = 1
position = Vector2(643, 76)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_ho1at")

[node name="Start_again_button" type="Button" parent="UI/Start_again"]
z_index = -2
offset_left = -163.0
offset_top = -153.0
offset_right = 160.0
offset_bottom = 157.0

[node name="Button" type="Button" parent="UI"]
layout_mode = 0
offset_left = 17.0
offset_top = 42.0
offset_right = 142.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("10_fo6nb")
theme_override_font_sizes/font_size = 35
text = "ВЫБОР
 МЯЧА"

[node name="Chose_ball" type="ColorRect" parent="UI"]
visible = false
z_index = 3
layout_mode = 0
offset_left = -991.0
offset_top = -143.0
offset_right = 1786.0
offset_bottom = 1416.0
mouse_filter = 1
color = Color(0.548963, 0.548963, 0.548963, 0.85098)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Chose_ball"]
layout_mode = 0
offset_left = 1049.0
offset_top = 655.0
offset_right = 1657.0
offset_bottom = 940.0

[node name="Button" type="Button" parent="UI/Chose_ball/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("10_fo6nb")
theme_override_font_sizes/font_size = 50
text = "ОБЫЧНЫЙ"

[node name="Button2" type="Button" parent="UI/Chose_ball/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("10_fo6nb")
theme_override_font_sizes/font_size = 60
text = "РАССЫПАЮЩИЙСЯ"

[node name="Button3" type="Button" parent="UI/Chose_ball/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("10_fo6nb")
theme_override_font_sizes/font_size = 50
text = "БОМБА"

[node name="Count_level_label" type="Label" parent="UI"]
layout_mode = 0
offset_left = -940.0
offset_top = 85.0
offset_right = 1667.0
offset_bottom = 207.0
text = "1"
label_settings = SubResource("LabelSettings_afqc7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="UI/Count_level_label"]
layout_mode = 0
offset_top = -85.0
offset_right = 2607.0
offset_bottom = 37.0
text = "УРОВЕНЬ "
label_settings = SubResource("LabelSettings_s7tw1")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Dicariations/Detection_last_ball" to="." method="_on_area_2d_body_entered"]
[connection signal="pressed" from="UI/End_game/Start_again" to="." method="_on_start_again_pressed"]
[connection signal="pressed" from="UI/Start_again/Start_again_button" to="." method="_on_start_again_pressed"]
[connection signal="pressed" from="UI/Button" to="." method="_chose_ball_button_pressed"]
[connection signal="pressed" from="UI/Chose_ball/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/Chose_ball/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="UI/Chose_ball/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
